--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     
         <style> 
-        .centrado {
+        .centrado{
             padding: 50px;
             margin-left: 10%;
             margin-right: 10%;
@@ -21,7 +21,7 @@
     <body>
         <div class="jumbotron centrado">
             <h1 class="display-4">Hola!</h1>
-            <p class="lead">Este es el índice de los distintos proyectos del curo de programación web CS50 ofertado por la universidad de Harvard</p>
+            <p class="lead">Este es el índice de los distintos proyectos del curo de programación web CS50 ofertado por la Universidad de Harvard</p>
             <hr class="my-4">
             <p>Este índice ha sido creado gracias a Bootstrap</p>
             <p class="lead">
