Terminada la pantalla principal
Falta añadir funcionalidad a I'm Feeling Lucky

--- a/Semana 0 - Search/index.html
+++ b/Semana 0 - Search/index.html
@@ -15,7 +15,7 @@
             </div>
             <img src="https://www.google.es/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png" class="center" id="google_logo">
 
-
+            <!--  Botón de búsqueda  -->
             <form action="https://google.es/search"  class="default_font"> 
                 <input type="text" name="q" class = "search_bar center" placeholder="Search here!" >
 
