Búsqueda imagen + avanzada

--- a/Semana 0 - Search/image_search.html
+++ b/Semana 0 - Search/image_search.html
@@ -1,2 +1,40 @@
-En construcción
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+	<title>Google Images</title>
+	<link rel="stylesheet" href="style.css">
+
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+		integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+</head>
+
+<body>
+	<div class="container-fluid">
+
+		<div>
+			<div id="Hipervinculos" class="default_font">
+
+				<a href="index.html " class="hipervinculo">Google Search</a>
+				
+
+			</div>
+			<img src="https://www.google.es/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png" class="center"
+				id="google_logo">
+            <a href="#" class="default_font" id="images_text">
+                                images
+            </a>
+			<!--  Botón de búsqueda  -->
+            <form action="https://www.google.com/search" class="default_font">
+                
+                <input type="hidden" name="tbm" value="isch">
+				<input type="text" name="q" class="search_bar center" placeholder="Search here!">
+                <input type="submit" name="btnK" value="Search" class="button center">
+			</form>
+		</div>
+	</div>
+</body>
+
+</html>
