--- a/Semana 0 - Search/index.html
+++ b/Semana 0 - Search/index.html
@@ -29,8 +29,9 @@
 				<input type="text" name="q" class="search_bar center" placeholder="Search here!">
 
 				<div id="button_row">
-					<input type="submit" value="Google Search" class="button">
-					<input type="submit" value="I'm Feeling Lucky" class="button" onsubmit="btnI">
+					
+					<input type="submit" name="btnK" value="Google Search" class="button">
+					<input type="submit" name="btnI" value="I'm Feeling Lucky" class="button" onsubmit="btnI">
 
 				</div>
 
